--- a/charts/platform/values.yaml
+++ b/charts/platform/values.yaml
@@ -1,10 +1,10 @@
 global:
-  imageRegistry: swampupsec.jfrog.io
+  imageRegistry: apptrusttraining1.jfrog.io
 platform:
   version: 2.1.16
 platformWebhook: {}
 web:
-  repository: swampupsec.jfrog.io/bookverse-web-internal-docker-release-local/web
+  repository: apptrusttraining1.jfrog.io/bookverse-web-internal-docker-release-local/web
   tag: 1.8.17
   replicas: 1
   port: 8080
@@ -27,12 +27,12 @@ web:
   service:
     type: ClusterIP
 inventory:
-  repository: swampupsec.jfrog.io/bookverse-inventory-internal-docker-release-local/inventory
+  repository: apptrusttraining1.jfrog.io/bookverse-inventory-internal-docker-release-local/inventory
   tag: 1.5.12
   replicas: 1
   port: 8000
 recommendations:
-  repository: swampupsec.jfrog.io/bookverse-recommendations-internal-docker-release-local/recommendations
+  repository: apptrusttraining1.jfrog.io/bookverse-recommendations-internal-docker-release-local/recommendations
   tag: 2.7.15
   replicas: 1
   port: 8000
@@ -42,7 +42,7 @@ recommendations:
     ttlSeconds: 60
   worker:
     enabled: true
-    repository: swampupsec.jfrog.io/bookverse-recommendations-internal-docker-release-local/recommendations-worker
+    repository: apptrusttraining1.jfrog.io/bookverse-recommendations-internal-docker-release-local/recommendations-worker
     tag: 1.8.23
     replicas: 1
     refreshSeconds: 60
@@ -69,7 +69,7 @@ recommendations:
 
         '
 checkout:
-  repository: swampupsec.jfrog.io/bookverse-checkout-internal-docker-release-local/checkout
+  repository: apptrusttraining1.jfrog.io/bookverse-checkout-internal-docker-release-local/checkout
   tag: 2.0.8
   replicas: 1
   port: 8000
